added the first 10 prompts of 2020
also fixed up some typos

--- a/randomprompt.html
+++ b/randomprompt.html
@@ -268,7 +268,17 @@
 "Draw a pony moving fast: motion blur / stretched / multiple limbs / tornado / tablecloth trick",
 "Draw a pony shedding / moulting exoskeleton / transforming / going bald",
 "Draw a pony with the prize / at the top / relaxing at home / celebrating / triumphant",
-"Draw any previous theme/Draw every previous theme"
+"Draw any previous theme/Draw every previous theme",
+"Draw A Pony Standing / Draw A Pony Stuck in Time",
+"Draw A Mobile Pony / Draw A Pony Springing To Life",
+"Draw A Pony Filled With Rage / Draw A Pony About To Lose It",
+"Draw A Passed Out Pony / Draw a Pony Chasing Their Dreams",
+"Draw a Pony Enjoying Your Favorite Meal / Draw a Pony Family Moment",
+"Draw a pony crushing on another pony / Draw a pony with a secret admirer",
+"Draw a Pony Enjoying Your Favorite Season / Draw a Pony Whooping It Up In Town",
+"Draw a pony as another species (Draw a MLP species other than an equine) / Draw a pony experiencing something unexpected",
+"Draw a pony staring down their worst fear / Draw a pony hanging on by a thread",
+"Draw a pony defying impossible odds / Draw a pony finding their inner courage"
       ];
     </script>
     <script>
