--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <script>
       let prompttag = document.getElementById("prompt");
       let counttag = document.getElementById("count");
+      let bbtag = document.getElementById("button_box");
       document.onload = putPrompt();
       document.onload = putCount();
+      document.onload = mobileCheck();
       function putPrompt(){
         prompttag.innerHTML = getRandomPrompt();
       }
@@ -36,6 +38,13 @@
       function putCount(){
         counttag.innerHTML = "There are " + getTotalPrompts() + " fixed prompts and "
           + getPossiblePrompts() + " possible generated prompts.";
+      }
+      // overwrite css for mobile devices made after 2005
+      function mobileCheck(){
+        if (/Mobi|Android/i.test(navigator.userAgent)) {
+          bbtag.style.width = "100%";
+          bbtag.style.fontsize = "1.2em";
+        };
       }
     </script>
   </body>
