--- a/randomprompt.html
+++ b/randomprompt.html
@@ -342,6 +342,9 @@ h3 {
   font-size: x-large;
   color: #111111;;
   background: #ffc107;
+  border-radius: 8px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 footer {
