--- a/randomprompt.html
+++ b/randomprompt.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <title>Random NATG prompt Generator</title>
     <script>
-      const prompts = [
+     const prompts = [
 "Draw a pony standing",
 "Draw a pony jumping",
 "Draw a pony dressed as The Great and Powerful Trixie!",
@@ -149,7 +149,7 @@
 "Draw a pony doing science/Draw a pony pushing boundaries",
 "Draw a pony daredevil/Draw a pony living life on the edge",
 "Draw a pony reaping an award/Draw a pony at the end of its rope",
-"Draw a pony graduating/Draw a pony party",
+"Draw a pony graduating / Draw a pony party",
 "Draw a pony standing / Draw a pony striking a pose.",
 "Draw a pony in motion / Draw a pony in need of direction.",
 "Draw a pony warming up / Draw a pony stretching its limits.",
@@ -239,6 +239,66 @@
 "Draw an exhausted pony / Draw a pony that's run out of juice",
 "Draw a pony or ponies doing as many of our past prompts as possible / Draw a pony mixing things up. ",
 "Draw a pony graduating / Draw a pony attaining their goal",
+"Draw any previous theme/Draw every previous theme",
+"Draw a Pony Standing / Draw A Pony Stuck in Time",
+"Draw a Mobile Pony / Draw A Pony Springing To Life",
+"Draw a Pony Filled With Rage / Draw A Pony About To Lose It",
+"Draw a Passed Out Pony / Draw a Pony Chasing Their Dreams",
+"Draw a Pony Enjoying Your Favorite Meal / Draw a Pony Family Moment",
+"Draw a pony crushing on another pony / Draw a pony with a secret admirer",
+"Draw a Pony Enjoying Your Favorite Season / Draw a Pony Whooping It Up In Town",
+"Draw a pony as another species (Draw a MLP species other than an equine) / Draw a pony experiencing something unexpected",
+"Draw a pony staring down their worst fear / Draw a pony hanging on by a thread",
+"Draw a pony defying impossible odds / Draw a pony finding their inner courage",
+"Draw a pony doing something you like to do (outside drawing) / Draw your OC's special talent",
+"Draw a pony with a wild imagination / Draw a pony lost in thought",
+"Draw a pony with a dark side / Draw a pony that’s bad to the bone",
+"Draw a ponifed fairy tale, nursery rhyme or legend / Draw a pony telling a ghostly story",
+"Draw a ponyfied version of your favorite book, game, ect / Draw a pony sharing their favorite thing with another pony",
+"Draw a pony back from the future / Draw a pony traveling through time",
+"Draw a pony with a sixth sense / Draw a pony encountering the supernatural",
+"Draw a pony in grave danger / Draw a pony about to meet its maker",
+"Draw a pony cheering up a friend / Draw a pony turning a frown upside down",
+"Draw a pony breaking out / Draw a pony escape artist",
+"Draw a pony pushing boundaries / Draw a pony stretching the limit",
+"Draw a pony racing to the finish / Draw a pony running short on time",
+"Draw ponies experiencing your perfect idea for an episode / Draw a pony with a brilliant idea",
+"Draw a pony doing a good deed / Draw a pony being a stand up citizen",
+"Draw a pony going to a foreign land / Draw a pony caught in a tourist trap",
+"Draw a pony on an adventure / Draw a pony on the wild side",
+"Draw a pony giving the gift of friendship / Draw a pony mending fences",
+"Redraw an older picture using what you’ve learned / Draw a pony learning from a mistake",
+"Draw a pony or ponies doing as many of our past prompts as possible / Draw a pony jumbling things up",
+"Draw a pony standing / Draw a static pony",
+"Draw a pony in motion / Draw a pony scrambling",
+"Draw a pony bursting with emotion / Draw a pony who can’t contain themselves",
+"Draw a pony with a secret / Draw a pony cracking under pressure",
+"Draw a pony making a friend / Draw a pony patching things up",
+"Draw a pony in over their head / Draw a pony biting off more than they can chew",
+"Draw a pony in love / Draw a pony ready to take the plunge",
+"Draw a pony as another species (Draw a MLP species other than a pony) / Draw a pony making a fresh start",
+"Draw a pony making a terrible mistake / Draw a pony getting a taste of their own medicine",
+"Draw a pony on a journey / Draw a pony hitting the road",
+"Draw a pony alone in the dark / Draw a pony who’s a real night owl",
+"Draw a pony visiting a strange new land / Draw a pony visiting where no pony has gone before",
+"Draw a pony enjoying some summer fun / Draw a pony baking in the sun",
+"Draw a pony up to no good / Draw a pony breaking every rule in the book",
+"Draw a ponyfied version of your favorite book, game, ect / Draw a pony sharing their favorite thing with another pony",
+"Draw a pony taking a breather / Draw a pony out of energy",
+"Draw a pony being inspired / Draw a pony beating impossible odds",
+"Draw a pony experiencing your most cherished memory / Draw a pony living life to the fullest",
+"Draw a pony on an adventure / Draw a pony on a noble quest",
+"Draw a pony procrastinating / Draw a pony with no time to spare",
+"Draw a pony lost in their imagination / Draw a pony zoning out",
+"Draw a pony pulling a prank / Draw a pony pulling the wool over someone’s eyes",
+"Draw a pony winning a competition / Draw a pony going for gold",
+"Draw a pony celebrating your favorite holiday / Draw a pony being the life of the party",
+"Draw an impulsive pony / Draw a pony making a split second decision",
+"Draw a pony trying something new / Draw a pony reaching for new heights",
+"Draw a pony experiencing failure / Draw a pony tasting bitter defeat",
+"Draw a pony on the last leg of its journey / Draw a pony coming home",
+"Draw a pony or ponies doing as many of our past prompts as possible / Draw a pony reflecting on the past",
+"Draw a pony graduating / Draw a pony moving towards a bright future",
 "Draw a pony portrait / draw a pony standing / relaxing",
 "Draw a pony rubbing her nose / ponies rubbing noses / a pony rubbing hooves together",
 "Draw a pony laughing / beaming / snickering.",
@@ -267,38 +327,8 @@
 "Draw a pony as a bird / fish / bat / insect / colourful rock",
 "Draw a pony moving fast: motion blur / stretched / multiple limbs / tornado / tablecloth trick",
 "Draw a pony shedding / moulting exoskeleton / transforming / going bald",
-"Draw a pony with the prize / at the top / relaxing at home / celebrating / triumphant",
-"Draw any previous theme/Draw every previous theme",
-"Draw A Pony Standing / Draw A Pony Stuck in Time",
-"Draw A Mobile Pony / Draw A Pony Springing To Life",
-"Draw A Pony Filled With Rage / Draw A Pony About To Lose It",
-"Draw A Passed Out Pony / Draw a Pony Chasing Their Dreams",
-"Draw a Pony Enjoying Your Favorite Meal / Draw a Pony Family Moment",
-"Draw a pony crushing on another pony / Draw a pony with a secret admirer",
-"Draw a Pony Enjoying Your Favorite Season / Draw a Pony Whooping It Up In Town",
-"Draw a pony as another species (Draw a MLP species other than an equine) / Draw a pony experiencing something unexpected",
-"Draw a pony staring down their worst fear / Draw a pony hanging on by a thread",
-"Draw a pony defying impossible odds / Draw a pony finding their inner courage",
-"Draw a pony doing something you like to do (outside drawing) / Draw your OC's special talent",
-"Draw a pony with a wild imagination / Draw a pony lost in thought",
-"Draw a pony with a dark side / Draw a pony that’s bad to the bone",
-"Draw a ponifed fairy tale, nursery rhyme or legend / Draw a pony telling a ghostly story",
-"Draw a ponyfied version of your favorite book, game, ect / Draw a pony sharing their favorite thing with another pony",
-"Draw a pony back from the future / Draw a pony traveling through time",
-"Draw a pony with a sixth sense / Draw a pony encountering the supernatural",
-"Draw a pony in grave danger / Draw a pony about to meet its maker",
-"Draw a pony cheering up a friend / Draw a pony turning a frown upside down",
-"Draw a pony breaking out / Draw a pony escape artist",
-"Draw a pony pushing boundaries / Draw a pony stretching the limit",
-"Draw a pony racing to the finish / Draw a pony running short on time",
-"Draw ponies experiencing your perfect idea for an episode / Draw a pony with a brilliant idea",
-"Draw a pony doing a good deed / Draw a pony being a stand up citizen",
-"Draw a pony going to a foreign land / Draw a pony caught in a tourist trap",
-"Draw a pony on an adventure / Draw a pony on the wild side",
-"Draw a pony giving the gift of friendship / Draw a pony mending fences",
-"Redraw an older picture using what you’ve learned / Draw a pony learning from a mistake",
-"Draw a pony or ponies doing as many of our past prompts as possible / Draw a pony jumbling things up"
-      ];
+"Draw a pony with the prize / at the top / relaxing at home / celebrating / triumphant"
+];
     </script>
     <script>
       function getRandomPrompt() {
@@ -316,7 +346,7 @@
 }
 
 #button_box {
-  width: 500px;
+  width: 100%;
   text-align: center;
 }
 
@@ -327,7 +357,7 @@ button {
   border: 2px;
   border-radius:8px;
   transition:0.3s;
-  color: white;
+  color: black;
 }
 
 button:hover {
@@ -339,13 +369,14 @@ body {
   color: #f8f9faff;
 }
 
-h3 {
+#prompt {
   font-size: x-large;
   color: #111111;;
   background: #ffc107;
   border-radius: 8px;
   padding-left: 4px;
   padding-right: 4px;
+  text-align: center;
 }
 
 footer {
