added 2022's (static) prompts

--- a/randomprompt.html
+++ b/randomprompt.html
@@ -299,6 +299,36 @@
 "Draw a pony on the last leg of its journey / Draw a pony coming home",
 "Draw a pony or ponies doing as many of our past prompts as possible / Draw a pony reflecting on the past",
 "Draw a pony graduating / Draw a pony moving towards a bright future",
+"Draw a pony standing / Draw a pony stuck in place",
+"Draw a moving pony / Draw a pony leaping to action",
+"Draw a pony filled with determination / Draw a pony ready to take on the world",
+"Draw a pony discovering something unexpected / Draw a pony hiding something",
+"Draw a pony meeting a long lost friend / Draw ponies who are inseparable from each other",
+"Draw a pony facing their greatest fear / Draw a pony scared senseless",
+"Draw a pony fawning over another pony / Draw a pony falling head over heels for another pony",
+"Draw a pony as another species / Draw a pony making a change in their life",
+"Draw a pony as a filly or colt / Draw a pony sent back in time",
+"Draw a pony full of pride / Draw a pony going above and beyond",
+"Draw a pony burning up / Draw a pony beating the heat",
+"Draw a pony lost in space / Draw a pony from the far future",
+"Draw a pony trying to come up with a prompt / draw a pony scraping the bottom of the barrel",
+"Draw a pony doing something they love / Draw a pony picking up a new hobby",
+"Draw a ponyfied version of your favorite book, game, ect / Draw a pony scene you’d loved to have seen in the show",
+"Draw different pony generations meeting each other / Draw a pony exploring a brand new world",
+"Draw a pony feeling hopeless / Draw a pony at the end of their rope",
+"Draw a pony dreaming / Draw a pony letting their mind wander",
+"Draw an exhausted pony / Draw a pony burning out",
+"Draw a pony finding their second wind / Draw a pony finding the courage to go on",
+"Draw a pony returning from a long journey / Draw a pony on an adventure",
+"Draw a pony having a blast / Draw a pony party",
+"Draw a pony up to no good / Draw a pony with twisted thoughts",
+"Draw a pony facing a mistake from their past / Draw a pony trying to make things right",
+"Draw a pony stretching the truth / Draw a pony with a tall tale to tell",
+"Draw a pony facing their destiny / Draw a pony about to make a life changing decision",
+"Draw a pony racing to the finish / Draw a pony beating the clock",
+"Draw a pony relaxing / Draw a pony catching their breath",
+"Draw as many previous prompts in a single picture as you can / Draw a pony being pulled every which way.",
+"Draw a pony graduating / Draw a pony attaining their goal.",
 "Draw a pony portrait / draw a pony standing / relaxing",
 "Draw a pony rubbing her nose / ponies rubbing noses / a pony rubbing hooves together",
 "Draw a pony laughing / beaming / snickering.",
